[dependencies]
byteorder = { version = "1" }
png = { version = "0.17", optional = true }

[features]
default = ["pngio"]
pngio = ["png"]

[lib]
path = "Source/lib.rs"

[package]
authors = [
	"Matthew D. Steele <mdsteele@alum.mit.edu>",
	"Tauri Programme within The Commons Conservancy",
]
description = "A library for encoding/decoding Apple Icon Image (.icns) files."
keywords = ["icns", "icon", "image"]
license-file = "LICENSE"
name = "tauri-icns"
readme = "README.md"
repository = "https://github.com/tauri-apps/rust-icns"
version = "0.1.0"
